--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.11.0",
     "axios": "^1.6.0",
     "easy-peasy": "^6.0.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
