--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "sweetalert2": "^11.10.1"
